# bitcoin

./: Cargo.toml  test.sh
blockchain/: db  snap.0000000000000FCC  snap.00000000000012E3  snap.0000000000001F26
src/: block.rs  blockchain.rs  cil.rs  lib.rs  main.rs  transaction.rs  util.rs  wallet.rs
utxo/: db  snap.0000000000000B44
