[package]
name = "btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
hex = "0.4.2"
sled = "0.34.7"
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
clap = "3.0.0-beta.2"
log = "0.4"
env_logger = "0.7.1"
